<resources>
    <string name="app_name">"「悅」拼</string>
    <string name="home_theme">粵拼學習平台</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_play">開始</string>
    <string name="action_settings">選擇</string>
    <string name="action_set">已選擇</string>
    <string name="update_list">更新</string>
    <string name="setting_initial">聲母</string>
    <string name="setting_vowel">韻母</string>
    <string name="setting_task_and_hints">選填和提示</string>
    <string name="setting_advanced">進階設定</string>
    <string name="setting_initial1">聲母:</string>
    <string name="setting_vowel1">韻母:</string>
    <string name="setting_quantity">數量</string>
    <string name="setting_finish">完成</string>
    <string name="selected_init">已選聲母</string>
    <string name="selected_vowel">已選韻母</string>
    <string name="select_quantity">請選題目數量</string>
    <string name="quantity_again">請重新設定題目數量</string>
    <string name="settings">設定</string>
    <string name="update_db">更新資料庫</string>
    <string name="init_1">b</string>
    <string name="init_2">p</string>
    <string name="init_3">m</string>
    <string name="init_4">f</string>
    <string name="init_5">d</string>
    <string name="init_6">t</string>
    <string name="init_7">n</string>
    <string name="init_8">l</string>
    <string name="init_9">g</string>
    <string name="init_10">k</string>
    <string name="init_11">ng</string>
    <string name="init_12">h</string>
    <string name="init_13">gw</string>
    <string name="init_14">kw</string>
    <string name="init_15">w</string>
    <string name="init_16">z</string>
    <string name="init_17">c</string>
    <string name="init_18">s</string>
    <string name="init_19">j</string>
    <string name="init_theme">請選擇是次練習的聲母</string>

    <string name="vowel_1">aa</string>
    <string name="vowel_10">aai</string>
    <string name="vowel_17">aau</string>
    <string name="vowel_22">aam</string>
    <string name="vowel_26">aan</string>
    <string name="vowel_34">aang</string>
    <string name="vowel_42">aap</string>
    <string name="vowel_46">aat</string>
    <string name="vowel_54">aak</string>
    <string name="vowel_11">ai</string>
    <string name="vowel_18">au</string>
    <string name="vowel_23">am</string>
    <string name="vowel_27">an</string>
    <string name="vowel_35">ang</string>
    <string name="vowel_43">ap</string>
    <string name="vowel_47">at</string>
    <string name="vowel_55">ak</string>
    <string name="vowel_3">e</string>
    <string name="vowel_12">ei</string>
    <string name="vowel_36">eng</string>
    <string name="vowel_56">ek</string>
    <string name="vowel_4">i</string>
    <string name="vowel_19">iu</string>
    <string name="vowel_24">im</string>
    <string name="vowel_28">in</string>
    <string name="vowel_37">ing</string>
    <string name="vowel_44">ip</string>
    <string name="vowel_48">it</string>
    <string name="vowel_57">ik</string>
    <string name="vowel_5">o</string>
    <string name="vowel_13">oi</string>
    <string name="vowel_20">ou</string>
    <string name="vowel_29">on</string>
    <string name="vowel_38">ong</string>
    <string name="vowel_49">ot</string>
    <string name="vowel_58">ok</string>
    <string name="vowel_6">oe</string>
    <string name="vowel_39">oeng</string>
    <string name="vowel_59">oek</string>
    <string name="vowel_7">eo</string>
    <string name="vowel_14">eoi</string>
    <string name="vowel_30">eon</string>
    <string name="vowel_50">eot</string>
    <string name="vowel_8">u</string>
    <string name="vowel_15">ui</string>
    <string name="vowel_31">un</string>
    <string name="vowel_40">ung</string>
    <string name="vowel_51">ut</string>
    <string name="vowel_60">uk</string>
    <string name="vowel_9">yu</string>
    <string name="vowel_32">yun</string>
    <string name="vowel_52">yut</string>
    <string name="vowel_16">i</string>
    <string name="vowel_21">u</string>
    <string name="vowel_25">m</string>
    <string name="vowel_33">n</string>
    <string name="vowel_41">ng</string>
    <string name="vowel_45">p</string>
    <string name="vowel_53">t</string>
    <string name="vowel_61">k</string>
    <string name="vowel_2">a</string>
    <string name="vowel_62">eu</string>
    <string name="vowel_63">em</string>
    <string name="vowel_64">ep</string>

    <string name="vowel_theme">請選擇是次練習的韻母</string>

    <string name="task_theme">請選擇是次練習的題目和提示</string>
    <string name="hints_theme">請選擇是次練習的提示</string>
    <string name="quantity_theme">請設定以下各組合數量</string>
    <string name="mode_theme">請選擇是次練習的模式</string>
    <string name="result_theme">測驗結果</string>
    <string name="remind_theme">題目重溫</string>
    <string name="hints">提示</string>
    <string name="setting_mode">模式</string>
    <string name="training_mode">訓練模式</string>
    <string name="test_mode">測驗模式</string>
    <string name="total_quantity">總題數：</string>
    <string name="total_combination">拼音數量：</string>
    <string name="total_correct">答對題數：</string>
    <string name="correct_percent">答對率：</string>
    <string name="ini_vowel">聲母 + 韻母</string>
    <string name="title_activity_exercise">ExerciseActivity</string>
    <string name="title_setting_exercise">SettingActivity</string>
    <string name="submit">提交</string>
    <string name="homepage">主頁</string>
    <string name="cancel">取消</string>
    <string name="ok">確定</string>
    <string name = "save">儲存變更</string>
    <string name="correct">正確</string>
    <string name="wrong">錯誤</string>
    <string name="slash">/</string>
    <string name="on">開啟</string>
    <string name="off">關閉</string>
    <string name="adv_theme">進階設定</string>
    <string name="mgt_db">管理數據庫</string>
    <string name="combination">組合</string>
    <string name="mgt_word">管理文字記錄</string>
    <string name="mgt_picture">管理圖片</string>
    <string name="amend_Picrecord">修改記錄</string>
    <string name="add_Picrecord">新增記錄</string>
    <string name="del_Picrecord">點擊並長按記錄以刪除記錄</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_result">ResultActivity</string>

</resources>
