<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    >
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hints_theme"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50dp"
            android:textColor="#5E3434"
            android:text="@string/hints_theme"
            android:id="@+id/task_tv_theme" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/hints_themeSep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hints_theme"
        android:gravity="center_horizontal">
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@android:color/transparent" />
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background= "@android:color/darker_gray"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@android:color/transparent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rl_hints_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hints_themeSep"
        android:orientation="horizontal">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/hints"
            android:textSize="50sp"
            android:paddingRight="10sp"/>
        <TextView
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/off"
            android:textSize="20sp"/>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchMinWidth="200dp"
            android:id="@+id/hints_switch1"
            android:layout_gravity="center_horizontal" />
        <TextView
            android:paddingLeft="10sp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/on"
            android:textSize="20sp"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_hints_1"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_hints_1">
        <RadioGroup
            android:id="@+id/hints_rg_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/task_rb_1"
                android:text="@string/setting_initial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"/>
            <RadioButton
                android:id="@+id/task_rb_2"
                android:text="@string/setting_vowel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"/>
            <RadioButton
                android:id="@+id/task_rb_3"
                android:text="@string/ini_vowel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"/>
        </RadioGroup>
    </LinearLayout>

</RelativeLayout>