<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/home_theme"
        android:id="@+id/home_theme"
        android:textSize="100dp"
        android:layout_marginTop="184dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_settings"
        android:textSize="45dp"
        android:id="@+id/setting_button"
        android:layout_alignTop="@+id/play_button"
        android:layout_toRightOf="@+id/play_button"
        android:layout_toEndOf="@+id/play_button"
        android:layout_marginLeft="131dp"
        android:layout_marginStart="131dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_play"
        android:textSize="45dp"
        android:id="@+id/play_button"
        android:layout_marginLeft="166dp"
        android:layout_marginStart="166dp"
        android:layout_below="@+id/home_theme"
        android:layout_alignLeft="@+id/home_theme"
        android:layout_alignStart="@+id/home_theme"
        android:layout_marginTop="86dp" />
</RelativeLayout>
